--- a/backend/index.html
+++ b/backend/index.html
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
     ></script>
     <script>
-      const socket = io("");
+      const socket = io("http://localhost:3000");
     </script>
   </body>
 </html>
