--- a/backend/index.html
+++ b/backend/index.html
@@ -14,6 +14,11 @@
     ></script>
     <script>
       const socket = io("http://localhost:3000");
+      io.on("connection", function (socket) {
+        socket.on("chat message", function (msg) {
+          console.log("message " + msg);
+        });
+      });
     </script>
   </body>
 </html>
