modifed socet logic

--- a/backend/index.html
+++ b/backend/index.html
@@ -14,6 +14,7 @@
     ></script>
     <script>
       const io = io("http://localhost:3000");
+      window.socket = socket;
       io.on("connection", function (socket) {
         socket.on("CHAT_RECEIVE_MESSAGE", function (msg) {
           console.log("message " + msg);
