--- a/backend/index.html
+++ b/backend/index.html
@@ -16,7 +16,7 @@
       window.onload = function () {
         const socket = io("http://localhost:3000");
         window.socket = socket;
-        socket.on("NEW:MESSAGE", function (msg) {
+        socket.on("SERVER:NEW_MESSAGE", function (msg) {
           console.log("message " + msg);
         });
       };
